# monorepo

./: .gitignore  .gitmodules  .migration-to-subrepo.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  package.json
.codex/: config.toml
.github/workflows/: publish-sdk-ts.yml  sync-org-profile.yml
docs/: ROADMAP.md  SOFTWARE_DEVELOPMENT_DOCUMENT.md
momo/: .dockerignore  .env.example  .gitignore  .gitrepo  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs  docker-compose.dev.yml  docker-compose.yml
momo/.github/workflows/: ci.yml  release.yml
momo/docs/: README.md  api.md  mcp.md  release-strategy.md  self-hosting.md
momo/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
momo/frontend/src/: App.tsx  api.ts  styles.css  types.ts
momo/frontend/src/components/: GraphCanvas.tsx  JsonView.tsx
momo/src/: config.rs  error.rs  lib.rs  main.rs  migration.rs
momo/src/api/: extractors.rs  frontend.rs  mod.rs  routes.rs  state.rs
momo/src/api/v1/: middleware.rs  mod.rs  openapi.rs  response.rs  router.rs
momo/src/api/v1/dto/: admin.rs  common.rs  conversation.rs  documents.rs  graph.rs  memories.rs  mod.rs  profile.rs  search.rs
momo/src/api/v1/handlers/: admin.rs  conversation.rs  documents.rs  graph.rs  health.rs  memories.rs  mod.rs  profile.rs  search.rs
momo/src/db/: connection.rs  metadata.rs  mod.rs  schema.rs  traits.rs
momo/src/db/backends/: libsql.rs
momo/src/db/repository/: chunks.rs  documents.rs  memories.rs  memory_sources.rs  mod.rs
momo/src/embeddings/: api.rs  mod.rs  provider.rs  reranker.rs  tests.rs
momo/src/intelligence/: contradiction.rs  extractor.rs  filter.rs  inference.rs  mod.rs  profile.rs  relationship.rs  temporal.rs  types.rs  utils.rs
momo/src/llm/: api.rs  mod.rs  prompts.rs  provider.rs
momo/src/mcp/: auth.rs  mod.rs  router.rs  server.rs
momo/src/models/: chunk.rs  common.rs  container.rs  document.rs  graph.rs  memory.rs  mod.rs  repository_types.rs  search.rs
momo/src/ocr/: api.rs  mod.rs  preprocessing.rs  provider.rs
momo/src/processing/: chunker.rs  chunker_registry.rs  code_chunker.rs  extractor.rs  language.rs  markdown_chunker.rs  mod.rs  pipeline.rs  structured_data_chunker.rs  webpage_chunker.rs
momo/src/processing/extractors/: audio.rs  csv.rs  docx.rs  image.rs  mod.rs  pptx.rs  video.rs  xlsx.rs
momo/src/search/: mod.rs  rewrite_cache.rs
momo/src/services/: episode_decay.rs  forgetting.rs  memory.rs  mod.rs  profile_refresh.rs  search.rs
momo/src/transcription/: api.rs  mod.rs  preprocessing.rs  provider.rs  whisper.rs
momo/tests/: admin_run_forgetting.rs  contradiction_test.rs  csv_extractor.rs  docx_extractor.rs  example_test.rs  extraction_tests.rs  graph_integration_test.rs  hybrid_search_integration_test.rs  inference_integration_test.rs  llm_config_tests.rs  llm_prompts_tests.rs  llm_provider_tests.rs  office_documents.rs  pptx_extractor.rs  profile_integration_test.rs  query_rewrite_tests.rs  reranker_search_tests.rs  xlsx_extractor.rs
momo/tests/common/: mod.rs
momo/tests/integration/: mod.rs
plugins/openclaw-momo/: .gitrepo
plugins/opencode-momo/: .gitrepo
plugins/pi-momo/: .gitrepo  package.json
sdks/typescript/: .gitrepo
